[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/Objects/BridgeClosed.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Objects/BridgeOpened.png" type="Texture" id=2]
[ext_resource path="res://Objects/Bridge.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Closed",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Open",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 7.07107
height = 51.927

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 60, 4 )

[node name="Bridge" type="Area2D"]
position = Vector2( -161, 11 )
collision_layer = 8
collision_mask = 0
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 17, -31 )
frames = SubResource( 1 )
animation = "Closed"

[node name="ClosedCollision" type="CollisionShape2D" parent="."]
position = Vector2( 57, -83 )
rotation = 0.785398
shape = SubResource( 2 )

[node name="Bridge" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="OpenCollision" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 13, 41 )
shape = SubResource( 3 )
disabled = true

[connection signal="area_entered" from="." to="." method="_on_Bridge_area_entered"]
